Updating the TravisCI configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ language: ruby
 before_install:
   - gem install bundler --version '~> 1.17'
 
+dist: trusty
+
 rvm:
   - 2.6
   - 2.5
   - 2.4
-  - rbx-3
+  - rbx-4
   - truffleruby
