--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,35 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['2.6', '2.7', '3.0', '3.1', '3.2', '3.3', '3.4']
         include:
-        - ruby: head
-          experimental: true
+          - ruby: '2.6'
+            bundler: 2.2.30
+          - ruby: '2.7'
+            bundler: 2.2.30
+          - ruby: '3.0'
+            bundler: 2.2.30
+          - ruby: '3.1'
+            bundler: 2.6.3
+          - ruby: '3.2'
+            bundler: 2.6.3
+          - ruby: '3.3'
+            bundler: 2.6.3
+          - ruby: '3.4'
+            bundler: 2.6.3
+          - ruby: head
+            bundler: 2.6.3
+            experimental: true
     steps:
     - uses: actions/checkout@v4
+
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{matrix.ruby}}
+        bundler: ${{matrix.bundler}}
         bundler-cache: true
+
+    - name: Install gems
+      run: bundle _${{matrix.bundler}}_ install
+
     - name: Run specs
-      run: bundle exec rspec
+      run: bundle _${{matrix.bundler}}_ exec rspec
